Creating a template project for ANTLR

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/language/.antlr/Language.interp
+src/language/.antlr/LanguageLexer.interp
+src/language/parser/Language.tokens
+src/language/parser/LanguageLexer.tokens
