Updated to ANTLR 4.11.1 Changes to be committed:     new file:   .vscode/extensions.json     modified:   .vscode/settings.json 	modified:   hello.code 	new file:   lib/antlr-4.11.1-complete.jar 	modified:   src/language/Language.g4 	modified:   src/language/parser/LanguageBaseListener.java 	modified:   src/language/parser/LanguageLexer.java 	modified:   src/language/parser/LanguageListener.java 	modified:   src/language/parser/LanguageParser.java 	modified:   src/language/parser/ParseTreeProperty.java

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
     "antlr4.call-graph.saveDir": ".",
     "antlr4.generation": {
+
+    
         "mode": "external",
         "language": "Java",
         "listeners": true,
         "visitors": false,
         "package": "language.parser",
         "outputDir": "parser",
-        "_alternativeJar": "/lib/antlr-4.9.1-complete.jar"
+        "alternativeJar": "/workspaces/antlr_template/lib/antlr-4.11.1-complete.jar"
     }
 }
